# Knapsack

./: .gitignore  Avances.pptx  CMakeLists.txt  GeneradorEjecuciones.py  GeneradorInstancias.py  Informe.md  Main.cpp  Metrics.ipynb  ejecuciones  slurm_script
instancias/: big_0.in  big_1.in  big_2.in  medium_0.in  medium_1.in  medium_2.in  small_0.in  small_1.in  small_2.in
libs/: CMakeLists.txt
libs/Genetico/: Genetico.cpp  Genetico.hpp
libs/Instancia/: Instancia.cpp  Instancia.hpp
libs/Iterativa/: Iterativa.cpp  Iterativa.hpp
libs/SolucionDP/: SolucionDP.cpp  SolucionDP.hpp
libs/Utilidades/: Utilidades.cpp  Utilidades.hpp
outputs/: big_0_Gen_Fijo_293.out  big_0_Gen_Fijo_42.out  big_0_Gen_Fijo_472.out  big_0_Gen_Fijo_534.out  big_0_Gen_Fijo_635.out  big_0_Gen_Lineal_293.out  big_0_Gen_Lineal_42.out  big_0_Gen_Lineal_472.out  big_0_Gen_Lineal_534.out  big_0_Gen_Lineal_635.out  big_0_Gen_PesoInvertido_293.out  big_0_Gen_PesoInvertido_42.out  big_0_Gen_PesoInvertido_472.out  big_0_Gen_PesoInvertido_534.out  big_0_Gen_PesoInvertido_635.out  big_0_It_42.out  big_0_It_472.out  big_0_It_635.out  big_0_Mem_Fijo_Fijo_293.out  big_0_Mem_Fijo_Fijo_42.out  big_0_Mem_Fijo_Fijo_472.out  big_0_Mem_Fijo_Fijo_635.out  big_0_Mem_Fijo_Lineal_472.out  big_0_Mem_Lineal_Lineal_293.out  big_0_Mem_Lineal_Lineal_42.out  big_0_Mem_Lineal_Lineal_472.out  big_0_Mem_Lineal_Lineal_534.out  big_0_Mem_PesoInvertido_Fijo_293.out  big_0_Mem_PesoInvertido_Fijo_42.out  big_0_Mem_PesoInvertido_Fijo_534.out  big_0_Mem_PesoInvertido_Lineal_293.out  big_0_Mem_PesoInvertido_Lineal_635.out  big_0_Mem_PesoInvertido_PesoInvertido_293.out  big_0_Mem_PesoInvertido_PesoInvertido_42.out  big_0_Mem_PesoInvertido_PesoInvertido_472.out  big_0_Mem_PesoInvertido_PesoInvertido_534.out  big_0_Mem_PesoInvertido_PesoInvertido_635.out  big_1_Gen_Fijo_293.out  big_1_Gen_Fijo_42.out  big_1_Gen_Fijo_472.out  (+349 more)
outputs/Genetico/: big_0_293.out  big_0_42.out  big_0_472.out  big_0_635.out  big_1_293.out  big_1_42.out  big_1_472.out  big_1_635.out  big_2_293.out  big_2_42.out  big_2_472.out  big_2_635.out  medium_0_293.out  medium_0_42.out  medium_0_472.out  medium_0_635.out  medium_1_293.out  medium_1_42.out  medium_1_472.out  medium_1_635.out  medium_2_293.out  medium_2_42.out  medium_2_472.out  medium_2_635.out  small_0_293.out  small_0_42.out  small_0_472.out  small_0_635.out  small_1_293.out  small_1_42.out  small_1_472.out  small_1_635.out  small_2_293.out  small_2_42.out  small_2_472.out  small_2_635.out
outputs/GeneticoPenalizado/: big_0_293.out  big_0_42.out  big_0_472.out  big_0_635.out  big_1_293.out  big_1_42.out  big_1_472.out  big_1_635.out  big_2_293.out  big_2_42.out  big_2_472.out  big_2_635.out  medium_0_293.out  medium_0_42.out  medium_0_472.out  medium_0_635.out  medium_1_293.out  medium_1_42.out  medium_1_472.out  medium_1_635.out  medium_2_293.out  medium_2_42.out  medium_2_472.out  medium_2_635.out  small_0_293.out  small_0_42.out  small_0_472.out  small_0_635.out  small_1_293.out  small_1_42.out  small_1_472.out  small_1_635.out  small_2_293.out  small_2_42.out  small_2_472.out  small_2_635.out
outputs/Iterativo/: big_0_293.out  big_0_42.out  big_0_472.out  big_0_635.out  big_1_293.out  big_1_42.out  big_1_472.out  (+23 more)
(+68 files in other folders)
